--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   go_router: ^14.2.8
   flutter_bloc: ^8.1.6
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
