--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   go_router: ^14.2.8
   flutter_bloc: ^8.1.6
   flutter_screenutil: ^5.9.3
+  carousel_slider: ^5.0.0
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
